# Expresso-Backend-Framework-

./: .dockerignore  CLI_README.md  CMakeLists.txt  DEPLOYMENT.md  Dockerfile  QUICK_REFERENCE.md  README.md  docker-compose.yml  project_cli.py  render.yaml
ExpressParser/: memory.c  parser.c  parser.h  request_builder.c  request_parse.c
ExpressRequests/: ExpressRequests.c
ExpressTypes/: error.h
HTTP/: CMakeLists.txt
HTTP/src/: main.cpp
HTTP/src/config/: config.cpp  config.hpp
HTTP/src/core/: handlers.cpp  server.hpp
HTTP/src/io/: request_reader.cpp
HTTP/src/utils/: file_utils.cpp  request_utils.cpp
cli/: CLI_README.md  project_cli.py  run_cli.bat
docs/: README.md  app.js  index.html  manual.html  styles.css
docs/assets/: styles.css
expresso-parser/: memory.c  parser.h  request_builder.c  request_parse.c
expresso-requests/: ExpressRequests.c  ExpressRequests.h
expresso-rs/: Cargo.toml  build.rs
expresso-rs/src/: handlers.rs  main.rs  parser.rs  parser_c.rs  server_cpp.rs
expresso-server/: CMakeLists.txt
expresso-server/src/: bridge.cpp  main.cpp
expresso-server/src/config/: config.cpp  config.hpp
expresso-server/src/constants/: http_constants.hpp
expresso-server/src/core/: handlers.cpp  handlers.hpp  server.cpp
expresso-server/src/io/: request_reader.hpp  response_sender.cpp  response_sender.hpp
expresso-server/src/utils/: compression.cpp  compression.hpp  file_utils.hpp  request_utils.hpp
nginx/: nginx.conf
